# books_exercise

./: .env.example  .env.tests  .gitignore  Makefile  README.md  dataset.sql  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  database.py  exceptions.py  main.py  models.py  routers.py  schemas.py  services.py
tests/: conftest.py  test_models.py  test_routes.py
